force-app/main/default/objects/RFI_Detail__c/RFI_Detail__c.object-meta.xml
<CustomObject>
    <label>RFI Item</label>
    <nameField>
        <label>RFI Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFI Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>