force-app/main/default/objects/RFI_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RFI_Details</relationshipName>
    <type>Lookup</type>
</CustomField>