force-app/main/default/objects/RFI_Detail__c/fields/Completion_date__c.field-meta.xml
<CustomField>
    <fullName>Completion_date__c</fullName>
    <label>RFI Item Completion Date</label>
    <type>DateTime</type>
</CustomField>