force-app/main/default/objects/RFI_Detail__c/fields/Due_in_days__c.field-meta.xml
<CustomField>
    <fullName>Due_in_days__c</fullName>
    <description>Due in Days</description>
    <formula>IF(AND(((Due_Date__c- TODAY() )&gt;=0),(( Due_Date__c - TODAY() )&lt;=2)),&quot;Due in Two Days&quot;,
IF(AND(((Due_Date__c - TODAY() )&gt;2),((Due_Date__c - TODAY() )&lt;=7)),&quot;Due in Week&quot;,
IF((Due_Date__c - TODAY() )&lt;0,&quot;Overdue&quot;,&quot;Due After A Week&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due in Days</label>
    <type>Text</type>
</CustomField>