force-app/main/default/objects/RFI_Detail__c/fields/IE_Team__c.field-meta.xml
<CustomField>
    <fullName>IE_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IE Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipName>RFI_Details</relationshipName>
    <type>Lookup</type>
</CustomField>