force-app/main/default/objects/RFI_Detail__c/fields/Implementation_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Blocked</label>
    <type>Checkbox</type>
</CustomField>