force-app/main/default/objects/RFI_Detail__c/fields/Incorrect_Category__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incorrect Category</label>
    <referenceTo>RFI_Categories__c</referenceTo>
    <relationshipName>RFI_Incorrect_Information_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>