force-app/main/default/objects/RFI_Detail__c/fields/Missing_Incomplete_Category__c.field-meta.xml
<CustomField>
    <fullName>Missing_Incomplete_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Missing/Incomplete Category</label>
    <referenceTo>RFI_Categories__c</referenceTo>
    <relationshipName>RFI_Missing_Incorrect_Information_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>