force-app/main/default/objects/RFI_Detail__c/fields/Missing_Incomplete_Information_Desc__c.field-meta.xml
<CustomField>
    <fullName>Missing_Incomplete_Information_Desc__c</fullName>
    <label>Missing/Incomplete Information Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>