force-app/main/default/objects/RFI_Detail__c/fields/Onsite_Remediation_Description__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Remediation_Description__c</fullName>
    <label>Onsite Remediation Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>