force-app/main/default/objects/RFI_Detail__c/fields/Plant_Asset__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Asset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot edit RFI until Plant Asset&apos;s Project Lifecycle Status is changed</errorMessage>
        <filterItems>
            <field>Plant_Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Asset</value>
        </filterItems>
        <filterItems>
            <field>Plant_Asset__c.Project_Lifecycle_Status__c</field>
            <operation>notEqual</operation>
            <value>Pending, Customer Validation, Operations, Decommissioned</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plant_Asset__c</referenceTo>
    <relationshipLabel>RFI Item</relationshipLabel>
    <relationshipName>RFI_Details</relationshipName>
    <type>Lookup</type>
</CustomField>