force-app/main/default/objects/RFI_Detail__c/fields/RFI_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Item_Status__c</fullName>
    <label>RFI Item Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted – Pending Customer Review</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Needs Detail</fullName>
            </value>
            <value>
                <fullName>Completed – Pending PF Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
            <value>
                <fullName>Completed - Pending PF Review</fullName>
                <isActive>false</isActive>
                <label>Completed - Pending PF Review</label>
            </value>
            <value>
                <fullName>Submitted - pending customer review</fullName>
                <isActive>false</isActive>
                <label>Submitted - pending customer review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>