force-app/main/default/objects/RFI_Detail__c/validationRules/Community_user_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_user_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Submitted – Pending Customer Review&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Needs Detail&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Completed – Pending PF Review&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;In Progress&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Closed&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Canceled&quot;),
ISPICKVAL(PRIORVALUE(RFI_Item_Status__c),&quot;Cannot Complete&quot;)),
 ISCHANGED(RFI_Item_Status__c ), 
OR(ISPICKVAL( RFI_Item_Status__c , &quot;Submitted – Pending Customer Review&quot;),
ISPICKVAL( RFI_Item_Status__c , &quot;Needs Detail&quot;),
ISPICKVAL( RFI_Item_Status__c , &quot;Canceled&quot;),
ISPICKVAL( RFI_Item_Status__c , &quot;Cannot Complete&quot;),
ISPICKVAL( RFI_Item_Status__c , &quot;Closed&quot;)),
     $User.ContactId  &lt;&gt; NULL)</errorConditionFormula>
    <errorMessage>Customer users cannot choose status other than &quot;In progress&quot; and &quot;Completed pending PF review&quot;</errorMessage>
</ValidationRule>