force-app/main/default/objects/RFI_Detail__c/validationRules/Existing_RFI.validationRule-meta.xml
<ValidationRule>
    <fullName>Existing_RFI</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(RFI_Number__r.Plant_Asset__r.Active_RFI__c  = 0,(AND(RFI_Number__r.Plant_Asset__r.Active_RFI__c   &lt;&gt; 0,
 ISPICKVAL( RFI_Number__r.RFI_Status__c , &quot;Closed&quot;)))),  
$User.ContactId &lt;&gt; NULL,
OR(ISCHANGED(Cancel_Cannot_Complete_Description__c), ISCHANGED(Category_Classification__c), ISCHANGED(Completion_date__c),
ISCHANGED(Customer_Comments__c), ISCHANGED(Due_Date__c), ISCHANGED(IE_Team__c),
ISCHANGED(IE_Owner__c), ISCHANGED(Implementation_Blocked__c), ISCHANGED(RFI_Detail_Description__c), 
ISCHANGED(Incorrect_Category__c), ISCHANGED(Missing_Incomplete_Category__c), ISCHANGED(RFI_Detail_Owner__c),
ISCHANGED(Onsite_Remediation_Description__c), ISCHANGED(Onsite_Remediation_Required__c), ISCHANGED(Plant_Asset__c), 
ISCHANGED(RFI_Category_Type__c), ISCHANGED(RFI_Item_Status__c), ISCHANGED(RFI_Number__c)),OR(ISPICKVAL( PRIORVALUE( RFI_Item_Status__c ) , &quot;Closed&quot;), 
ISPICKVAL( PRIORVALUE( RFI_Item_Status__c ) , &quot;Canceled&quot;),
ISPICKVAL( PRIORVALUE( RFI_Item_Status__c ) , &quot;Cannot Complete&quot;)))</errorConditionFormula>
    <errorMessage>Cannot edit RFI Item once status is Closed or Canceled or Cannot complete . Please contact PF owner</errorMessage>
</ValidationRule>