force-app/main/default/objects/RFI_Detail__c/validationRules/Onsite_Remediation_Required_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Onsite_Remediation_Required_Rule</fullName>
    <active>true</active>
    <description>If Onsite Remediation Required is &apos;Yes&apos;,Then &apos;Onsite Remediation Instructions’ is must</description>
    <errorConditionFormula>AND( ISPICKVAL( Onsite_Remediation_Required__c ,&apos;Yes&apos;),
LEN( Onsite_Remediation_Description__c )= 0
)</errorConditionFormula>
    <errorMessage>&apos;Onsite Remediation Description&apos; is must</errorMessage>
</ValidationRule>