force-app/main/default/objects/RFI_Detail__c/validationRules/RFI_Status_field_Change_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>RFI_Status_field_Change_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN( Cancel_Cannot_Complete_Description__c ) = 0,
OR(ISPICKVAL(RFI_Item_Status__c , &apos;Canceled&apos;),
ISPICKVAL(RFI_Item_Status__c , &apos;Cannot Complete&apos;))
)</errorConditionFormula>
    <errorDisplayField>Cancel_Cannot_Complete_Description__c</errorDisplayField>
    <errorMessage>&apos;Cancel/Cannot Complete Description&apos; is must</errorMessage>
</ValidationRule>