force-app/main/default/objects/RFI_Detail__c/listViews/My_Open_RFI_Items.listView-meta.xml
<ListView>
    <fullName>My_Open_RFI_Items</fullName>
    <columns>NAME</columns>
    <columns>RFI_Item_Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>RFI_Number__c</columns>
    <columns>Implementation_Blocked__c</columns>
    <columns>Customer_Comments__c</columns>
    <columns>RFI_Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RFI_Item_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Canceled,Cannot Complete</value>
    </filters>
    <filters>
        <field>Logged_in_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Open RFI Items</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>